--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html"><Lasagna/a></li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
     </ul>
 </body>
 </html>
