fixed typo in description of spaghetti

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Baked Spaghetti</h1>
     <img src="https://hips.hearstapps.com/del.h-cdn.co/assets/17/37/1505340657-baked-spaghetti-delish-1.jpg?crop=1xw:1xh;center,top&resize=768:*" alt="pic of spaghetti">
-    <h1>Cheapo Lasagna</h1>
+    <h1>Cheapo Spaghetti</h1>
     <br>
     <h2>Ingredient Checklist</h2>
     <ul>
