--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
+        <li><a href="recipes/ravioli.html">Ravioli</a></li>
     </ul>
 </body>
 </html>
